--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,5 +14,9 @@
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19",
+    "sequelize-cli": "^6.4.1"
   }
 }
